--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.1",
+    "rxjs": "^7.8.0",
     "web-vitals": "^1.1.2",
     "yup": "^1.0.0"
   },
